--- a/index.css
+++ b/index.css
@@ -1,1 +1,13 @@
-@import
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,500&family=Russo+One&family=Sanchez:ital@0;1&display=swap');
+p{
+    font-family:"Raleway", sans-serif;
+    font-size:14pt;
+}
+h2{ 
+    font-family:"Russo One", sans-serif;
+    font-size:22pt;
+}
+h3{
+    font-family:"Russo One", sans-serif;
+    font-size:18pt;
+}
