--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@
 p{
     font-family:"Raleway", sans-serif;
     font-size:14pt;
+    padding-left: 200px;
+    padding-right: 200px;
 }
 h2{ 
     font-family:"Russo One", sans-serif;
