--- a/index.css
+++ b/index.css
@@ -4,15 +4,18 @@ p{
     font-size:14pt;
     padding-left: 200px;
     padding-right: 200px;
+    line-height:1.6;
 }
 h2{ 
     font-family:"Russo One", sans-serif;
-    font-size:40px;
+    font-size:22pt;
     text-align:center;
 }
 h3{
     font-family:"Russo One", sans-serif;
-    font-size: 48px;
+    font-size:18pt;
+    margin-left:200px;
+    margin-top:200px;
 }
 .solid {
         width: 100vw;
@@ -46,7 +49,7 @@ h1{
         color: navy;
 }    
 .quotes{
-    background-color:#F7EBE9;
+    background-color:lightgray;
     width:100vw;
     height:40vh;
     font-family:"Sanchez", sans-serif;
@@ -111,38 +114,33 @@ h1{
     align-items: center;
     justify-content: center;
 }
-
-.titleprada{
-    color: lightskyblue;
-    background-color: midnightblue;
-    width: 779px;
-    height: 24px;
+.sec1{
+    background-image:url("../spread/grid.png");
+    background-size:50%;
 }
-
-.titlewheel{
-    color: midnightblue;
-    background-color: lightsalmon;
-    width: 779px;
-    height: 24px;
+.sectionone{
+    padding-left:100px;
+    padding-bottom:175px;
 }
-
-.titlememphis{
-    color: lightskyblue;
-    background-color: steelblue;
-    width: 779px;
-    height: 24px;
+.thebar{
+    background-color:midnightblue;
+    width: 350px;
+    height: 15px;
+    margin-bottom:0px;
 }
-
-.titleconstruct{
-    color: lightskyblue;
-    background-color: darkslategray;
-    width: 779px;
-    height: 24px;
+.sec2{
+    background-color:gainsboro;
+    width:100vw;
+    height:130vh;
+    align-items: center;
+    justify-content: center;
 }
-
-.titleconclusion{
-    color: coral;
-    background-color: gainsboro;
-    width: 779px;
-    height: 24px;
+.stwotitle{
+    padding-top:20px;
+}
+.thebarr{
+    background-color:lightsalmon;
+    width: 350px;
+    height: 15px;
+    margin-bottom:0px;
 }
