--- a/index.css
+++ b/index.css
@@ -12,9 +12,10 @@
 
 @media (min-width: 768px) {
     :root {
-    --body-copy: 20px;
+    --body-copy: 24px;
     -page-spacing: 48px;
-    }
+    
+}
 }
 
 p{
@@ -23,27 +24,48 @@ p{
     line-height:var(--page-spacing);
 }
 
+@media (min-width: 768px) {
+    p {
+        padding-left: calc(var(--page-spacing)*11); 
+        padding-right: calc(var(--page-spacing)*11);
+        font-size: 20px;
+        line-height:calc(var(--page-spacing)*1.5);
+    }
+}
+
 h1{
     font-family:"Sanchez", sans-serif;
-    font-size: calc(var(--body-copy)*2.5)
+    font-size: calc(var(--body-copy)*2.5);
+    padding-left: calc(var(--body-copy)*2);
+    line-height:calc(var(--page-spacing)*2.1);
+    
+}
+
+@media (min-width: 768px) {
+    h1{
+        padding-left: calc(var(--body-copy)*6);
+        line-height:calc(var(--page-spacing)*3.5);  
+    }
 }
 
 h2{
     font-family:"Russo One", sans-serif;
     text-align: center;
-    font-size: calc(var(--body-copy)*1.5)
+    font-size: calc(var(--body-copy)*1.5);
 }
 
 h3{
     font-family:"Russo One", sans-serif;
-    font-size: calc(var(--body-copy)*1.7)
-
+    font-size: calc(var(--body-copy)*1.7);
+    
 }
 
 .solid {
 background-color:lightsalmon;
 height: 50px;
+padding-bottom: 20px;
 }
+
 
 .raleway {
     font-family:"raleway", sans-serif;
@@ -57,20 +79,27 @@ flex-direction: column;
 row-gap: calc(var(--page-spacing)*2);
 }
 
+
+
 .subtitle {
     font-family:"Sanchez", sans-serif;
     font-style:italic;
     font-size:calc(var(--body-copy)*1) ;
-    padding-left:500px;
+    padding-left:calc(var(--body-copy)*1);
+    padding-right:calc(var(--body-copy)*1);
 }
 
+@media (min-width: 768px) {
+    .subtitle{
+        padding-left:calc(var(--body-copy)*6);   
+    }
+}
 
 
 .quotes{
     background-color:#F7EBE9;
 
     height:40vh;
-    margin-top:-250px;
     font-family:"Sanchez", sans-serif;
     font-size:calc(var(--body-copy)*0.9);
     font-style:italic;
@@ -81,16 +110,26 @@ row-gap: calc(var(--page-spacing)*2);
     line-height: var(--page-spacing);
 }
 
+@media (min-width: 768px) {
+    .quotes{
+    line-height:calc(var(--page-spacing)*1.5);  
+    }
+}
+
 .bold{
     font-family:"raleway", sans-serif;
     font-weight:600;
-    margin-top:-20vh;
 }
 
 .infos{
-    margin-top:-10vh;
     margin-right:5vw;
     text-align:right;
+    
+}
+
+.author{
+    font-size: calc(var(--body-copy)*1.5);
+    font-family:"Raleway", sans-serif;
 }
 
 .agen{
@@ -102,6 +141,7 @@ row-gap: calc(var(--page-spacing)*2);
     justify-content: center;
     width: 100% ;
     height: calc(var(--body-copy)*6);
+    
 }
 
 .agenn{
@@ -112,7 +152,7 @@ row-gap: calc(var(--page-spacing)*2);
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: -26px;
+    margin-top: -31px;
 }
 .agennn{
     background-color:steelblue;
@@ -122,7 +162,7 @@ row-gap: calc(var(--page-spacing)*2);
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: -26px;
+    margin-top: -31px;
 }
 .agennnn{
     background-color:darkslategray;
@@ -132,7 +172,7 @@ row-gap: calc(var(--page-spacing)*2);
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: -26px;
+    margin-top: -31px;
 }
 .concluagen{
     background-color:gainsboro;
@@ -142,7 +182,7 @@ row-gap: calc(var(--page-spacing)*2);
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: -26px;
+    margin-top: -31px;
 }
 
 .sec1{
@@ -151,9 +191,9 @@ row-gap: calc(var(--page-spacing)*2);
 }
 
 .sectionone{
-    margin:10vh;
-    padding-left:calc(var(--body-copy)*3);
+    padding-left:calc(var(--body-copy)*1);
     padding-bottom:calc(var(--body-copy)*2);
+    margin-top: calc(var(--body-copy)*5) ;
 }
 
 .thebar{
@@ -161,15 +201,11 @@ row-gap: calc(var(--page-spacing)*2);
     width: 360px;
     height: 15px;
     margin-bottom:0px;
-    padding-left:100px;
-    padding-bottom:30px;
-    margin-top:20vh;
 }
 
 .sec2{
-    height:730px;
     background-color:gainsboro;
-    margin-bottom:-10vh;
+    
     align-items: center;
     justify-content: center;
 }
@@ -182,9 +218,6 @@ row-gap: calc(var(--page-spacing)*2);
     width: 350px;
     height: 15px;
     margin-bottom:0px;
-    margin-top:20vh;
-    padding-left:100px;
-    padding-bottom:30px;
 }
 
 .sec3 {
@@ -196,13 +229,10 @@ row-gap: calc(var(--page-spacing)*2);
     }
     
     .barm{
-    margin-top:20vh;
     background-color: steelblue;
     width: 350px;
     height:15px;
     margin-bottom:0px;
-    padding-left:100px;
-    padding-bottom:30px;
     }
 
     .sec4 {
@@ -214,13 +244,10 @@ row-gap: calc(var(--page-spacing)*2);
         }
         
         .barc{
-        margin-top:20vh;
         background-color: darkslategray;
-        width: 450px;
+        width: 350px;
         height:15px;
         margin-bottom:0px;
-        padding-left:100px;
-        padding-bottom:30px;
         }
 
     .sec5 {
@@ -233,9 +260,6 @@ row-gap: calc(var(--page-spacing)*2);
             }
             
             .barco{
-            margin-top:20vh;
-            padding-left:100px;
-            padding-bottom:30px;
             background-color: white;
             width: 350px;
             height:15px;
@@ -246,7 +270,21 @@ row-gap: calc(var(--page-spacing)*2);
                 text-indent: 15%;
             }
 
+            .conclusion1{
+                font-family:"Sanchez", sans-serif;
+                font-size: calc(var(--body-copy)*1);
+                line-height:calc(var(--page-spacing)*1.5);
+            }
 
-    .header{
-        padding-left:200px;
-    }
+            @media (min-width: 768px) {
+                .conclusion1{
+                    font-size: calc(var(--body-copy)*1.3);
+                line-height:calc(var(--page-spacing)*1.8);
+                }
+            }
+
+
+@media print {
+    
+}
+
